[package]
name = "loader"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'     # Optimize for size.
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
strip = true   

[dependencies]
dinvoke = { path = "dinvoke" }
manualmap = { path = "manualmap" }
bindings = { path = "bindings" }
data = { path = "data" }
