[package]
name = "payload"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'     # Optimize for size.
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
strip = true   

[dependencies]
dinvoke = { path = "dinvoke" }
bindings = { path = "bindings" }
data = { path = "data" }

[lib]
crate-type = ["cdylib"]